--- a/Index.html
+++ b/Index.html
@@ -137,19 +137,19 @@
             </ul>
             <ul>
                 <li>
-                    <a href="http://localhost:53905/desktop#home" target="_blank">SM 6 - Local</a>
+                    <a href="http://localhost:60861/Default.aspx" target="_blank">CC - Local</a>
                 </li>
                 <li>
-                    <a href="http://dragon/sm6/desktop#home" target="_blank">SM 6 - Dragon</a>
+                    <a href="http://dragon/sm6/callcenter" target="_blank">CC - Dragon</a>
                 </li>
                 <li>
-                    <a href="https://west-stage.servicemonster.net/sm6" target="_blank">SM 6 - Stage</a>
+                    <a href="https://west-stage.servicemonster.net/callcenter" target="_blank">CC - Stage</a>
                 </li>
                 <li>
-                    <a href="https://west-test.servicemonster.net/sm6" target="_blank">SM 6 - Test</a>
+                    <a href="https://west-test.servicemonster.net/callcenter" target="_blank">CC - Test</a>
                 </li>
                 <li>
-                    <a href="http://six.servicemonster.net" target="_blank">SM 6 - Production</a>
+                    <a href="http://cc.servicemonster.net" target="_blank">CC - Production</a>
                 </li>
             </ul>
         </div>
