--- a/Index.html
+++ b/Index.html
@@ -78,9 +78,12 @@
             <span>Media</span>
             <br />
             <ul>
-                <li>
-                    <a href="https://www.youtube.com/" target="_blank">YouTube</a>
-                </li>
+              <li>
+                  <a href="https://www.youtube.com/" target="_blank">YouTube</a>
+              </li>
+              <li>
+                  <a href="https://tv.youtube.com/" target="_blank">YouTube TV</a>
+              </li>
                 <li>
                     <a href="http://10.0.0.208:32400/web/index.html" target="_blank">Plex</a>
                 </li>
