--- a/Index.html
+++ b/Index.html
@@ -1,178 +1,351 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Home Page</title>
-    <style type="text/css">
-        .personal {
-            width: 100%;
-            height: 200px;
-        }
+  <title>Home Page</title>
+  <style type="text/css">
+    .personal {
+      width: 100%;
+      height: 200px;
+    }
 
-        .section {
-            float: left;
-            min-width: 220px;
-            border: 1px solid #ddd;
-            margin: 10px;
-            padding: 10px;
-        }
+    .section {
+      float: left;
+      min-width: 220px;
+      border: 1px solid #ddd;
+      margin: 10px;
+      padding: 10px;
+    }
 
-            .section span {
-            }
+    .section ul {
+      float: left;
+    }
+  </style>
 
-            .section ul {
-                float: left;
-            }
-    </style>
+  <script type="text/javascript">
+    function init() {
+      let userAgent = navigator.userAgent;
+
+      if (userAgent.match(/edg/i)) {
+        alert("edge");
+      } else if (userAgent.match(/firefox|fxios/i)) {
+        alert("firefox");
+      } else if (userAgent.match(/safari/i)) {
+        alert("safari");
+      } else if (userAgent.match(/opr\//i)) {
+        alert("opera");
+      } else if (userAgent.match(/chrome|chromium|crios/i)) {
+        alert("chrome");
+      }
+      else {
+        alert("No browser detection");
+      }
+    }
+
+  </script>
 </head>
-<body>
+
+<body onload="init()">
+  <div class="chrome">
     <div class="personal">
-        <div class="section">
-            <span>Social</span>
-            <br />
-            <ul>
-                <li>
-                    <a href="https://www.reddit.com" target="_blank">Reddit</a>
-                </li>
-                <li>
-                    <a href="https://www.twitter.com" target="_blank">Twitter</a>
-                </li>
-                <li>
-                    <a href="https://mail.google.com" target="_blank">Gmail</a>
-                </li>
-                <li>
-                    <a href="https://mail.yahoo.com" target="_blank">Yahoo Mail</a>
-                </li>
-            </ul>
-        </div>
-        <div class="section">
-            <span>Football</span>
-            <br />
-            <ul>
-                <li>
-                    <a href="https://football.fantasysports.yahoo.com/f1/632271" target="_blank">Yahoo! Fantasy League</a>
-                </li>
-                <li>
-                    <a href="https://www.reddit.com/r/fantasyfootball" target="_blank">r/FantasyFootball</a>
-                </li>
-                <li>
-                    <a href="https://www.fantasypros.com/nfl/myplaybook/cheat-sheets.php" target="_blank">Fantasy Pros</a>
-                </li>
-                <li>
-                    <a href="http://www.borischen.co/">Boris Chen Tier Charts</a>
-                </li>
-            </ul>
-        </div>
-        <div class="section">
-            <span>Shopping</span>
-            <br />
-            <ul>
-                <li>
-                    <a href="https://slickdeals.net/" target="_blank">Slick Deals</a>
-                </li>
-                <li>
-                    <a href="https://www.amazon.com/" target="_blank">Amazon</a>
-                </li>
-            </ul>
-        </div>
-        <div class="section">
-            <span>Media</span>
-            <br />
-            <ul>
-              <li>
-                  <a href="https://www.youtube.com/" target="_blank">YouTube</a>
-              </li>
-              <li>
-                  <a href="https://tv.youtube.com/" target="_blank">YouTube TV</a>
-              </li>
-                <li>
-                    <a href="http://10.0.0.208:32400/web/index.html" target="_blank">Plex</a>
-                </li>
-                <li>
-                    <a href="https://www.amazon.com/gp/video/storefront" target="_blank">Prime Video</a>
-                </li>
-                <li>
-                    <a href="https://www.netflix.com/" target="_blank">Netflix</a>
-                </li>
-                <li>
-                    <a href="http://10.0.0.206:9091/transmission/web/#upload">Transmission</a>
-                </li>
-                <li>
-                    <a href="https://www.twitch.tv/" target="_blank">Twitch</a>
-                </li>
-            </ul>
-        </div>
+      <div class="section">
+        <span>Social</span>
+        <br />
+        <ul>
+          <li>
+            <a href="https://www.reddit.com" target="_blank">reddit</a>
+          </li>
+          <li>
+            <a href="https://www.twitter.com" target="_blank">Twitter</a>
+          </li>
+          <li>
+            <a href="https://mail.google.com" target="_blank">Gmail</a>
+          </li>
+          <li>
+            <a href="https://mail.yahoo.com" target="_blank">Yahoo Mail</a>
+          </li>
+        </ul>
+      </div>
+      <div class="section">
+        <span>Football</span>
+        <br />
+        <ul>
+          <li>
+            <a href="https://football.fantasysports.yahoo.com/f1/632271" target="_blank">Yahoo! Fantasy League</a>
+          </li>
+          <li>
+            <a href="https://www.reddit.com/r/fantasyfootball" target="_blank">r/FantasyFootball</a>
+          </li>
+          <li>
+            <a href="https://www.fantasypros.com/nfl/myplaybook/cheat-sheets.php" target="_blank">Fantasy Pros</a>
+          </li>
+          <li>
+            <a href="http://www.borischen.co/">Boris Chen Tier Charts</a>
+          </li>
+        </ul>
+      </div>
+      <div class="section">
+        <span>Shopping</span>
+        <br />
+        <ul>
+          <li>
+            <a href="https://slickdeals.net/" target="_blank">Slick Deals</a>
+          </li>
+          <li>
+            <a href="https://www.amazon.com/" target="_blank">Amazon</a>
+          </li>
+        </ul>
+      </div>
+      <div class="section">
+        <span>Media</span>
+        <br />
+        <ul>
+          <li>
+            <a href="https://www.youtube.com/" target="_blank">YouTube</a>
+          </li>
+          <li>
+            <a href="https://tv.youtube.com/" target="_blank">YouTube TV</a>
+          </li>
+          <li>
+            <a href="http://10.0.0.207:32400/web/index.html" target="_blank">Plex</a>
+          </li>
+          <li>
+            <a href="https://www.amazon.com/gp/video/storefront" target="_blank">Prime Video</a>
+          </li>
+          <li>
+            <a href="https://www.netflix.com/" target="_blank">Netflix</a>
+          </li>
+          <li>
+            <a href="http://10.0.0.207:9091/transmission/web/#upload">Transmission</a>
+          </li>
+          <li>
+            <a href="https://www.twitch.tv/" target="_blank">Twitch</a>
+          </li>
+        </ul>
+      </div>
     </div>
     <div>
-        <div class="section">
-            <span>Work Links</span>
-            <br />
-            <ul>
-                <li>
-                    <a href="https://servicemonster818.workplace.com/" target="_blank">Workplace</a>
-                </li>
-                <li>
-                    <a href="https://developer.servicemonster.net/" target="_blank">Dev Docs</a>
-                </li>
-                <li>
-                    <a href="https://principalfocus-my.sharepoint.com/personal/emccleskey_servicemonster_net/_layouts/15/onedrive.aspx?ct=1590623353095&or=OWA%2DNT&cid=810aa762%2D5e71%2D7958%2Dfc0a%2Dfa6239258edb&originalPath=aHR0cHM6Ly9wcmluY2lwYWxmb2N1cy1teS5zaGFyZXBvaW50LmNvbS86ZjovZy9wZXJzb25hbC9lbWNjbGVza2V5X3NlcnZpY2Vtb25zdGVyX25ldC9FdG1Zb1J2dE5LNU5oZEwxaldnX0dXRUItSV9YLVRxeHhqMDV6QjRmWE14X2pRP3J0aW1lPWFJa29qNWdDMkVn&id=%2Fpersonal%2Femccleskey%5Fservicemonster%5Fnet%2FDocuments%2FTimesheets%20%2D%20Dev%2FAndersonMatt" target="_blank">Timesheets</a>
-                </li>
-
-
-                
-
-            </ul>
-            <ul>
-                <li>
-                    <a href="http://localhost:53905/desktop#home" target="_blank">SM 6 - Local</a>
-                </li>
-                <li>
-                    <a href="http://dragon/sm6/desktop#home" target="_blank">SM 6 - Dragon</a>
-                </li>
-                <li>
-                    <a href="https://west-stage.servicemonster.net/sm6" target="_blank">SM 6 - Stage</a>
-                </li>
-                <li>
-                    <a href="https://west-test.servicemonster.net/sm6" target="_blank">SM 6 - Test</a>
-                </li>
-                <li>
-                    <a href="http://six.servicemonster.net" target="_blank">SM 6 - Production</a>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <a href="http://localhost:60861/Default.aspx" target="_blank">CC - Local</a>
-                </li>
-                <li>
-                    <a href="http://dragon/sm6/callcenter" target="_blank">CC - Dragon</a>
-                </li>
-                <li>
-                    <a href="https://west-stage.servicemonster.net/callcenter" target="_blank">CC - Stage</a>
-                </li>
-                <li>
-                    <a href="https://west-test.servicemonster.net/callcenter" target="_blank">CC - Test</a>
-                </li>
-                <li>
-                    <a href="http://cc.servicemonster.net" target="_blank">CC - Production</a>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <a href="http://localhost:51683/checkout/acme_carpet_cleaning/ZjY0cVoyNndvdFM3YVJnV2U4WFkxajdhcHBHQTZlblAwRlJERWRwQzFXOCUzZA==/sample" target="_blank">WebForms - Local</a>
-                </li>
-                <li>
-                    <a href="http://dragon/sm_webforms/checkout/acme_carpet_cleaning/ZjY0cVoyNndvdFM3YVJnV2U4WFkxajdhcHBHQTZlblAwRlJERWRwQzFXOCUzZA==/sample" target="_blank">WebForms - Dragon</a>
-                </li>
-                <li>
-                    <a href="https://west-stage.servicemonster.net/callcenter" target="_blank">WebForms - Stage</a>
-                </li>
-                <li>
-                    <a href="https://west-test.servicemonster.net/callcenter" target="_blank">WebForms - Test</a>
-                </li>
-                <li>
-                    <a href="http://cc.servicemonster.net" target="_blank">WebForms - Production</a>
-                </li>
-            </ul>
-        </div>
+      <div class="section">
+        <span>Work Links</span>
+        <br />
+        <ul>
+          <li>
+            <a href="https://servicemonster818.workplace.com/" target="_blank">Workplace</a>
+          </li>
+          <li>
+            <a href="https://developer.servicemonster.net/" target="_blank">Dev Docs</a>
+          </li>
+          <li>
+            <a href="https://principalfocus-my.sharepoint.com/personal/emccleskey_servicemonster_net/_layouts/15/onedrive.aspx?ct=1590623353095&or=OWA%2DNT&cid=810aa762%2D5e71%2D7958%2Dfc0a%2Dfa6239258edb&originalPath=aHR0cHM6Ly9wcmluY2lwYWxmb2N1cy1teS5zaGFyZXBvaW50LmNvbS86ZjovZy9wZXJzb25hbC9lbWNjbGVza2V5X3NlcnZpY2Vtb25zdGVyX25ldC9FdG1Zb1J2dE5LNU5oZEwxaldnX0dXRUItSV9YLVRxeHhqMDV6QjRmWE14X2pRP3J0aW1lPWFJa29qNWdDMkVn&id=%2Fpersonal%2Femccleskey%5Fservicemonster%5Fnet%2FDocuments%2FTimesheets%20%2D%20Dev%2FAndersonMatt"
+              target="_blank">Timesheets</a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <a href="http://localhost:53905/desktop#home" target="_blank">SM 6 - Local</a>
+          </li>
+          <li>
+            <a href="http://dragon/sm6/desktop#home" target="_blank">SM 6 - Dragon</a>
+          </li>
+          <li>
+            <a href="https://west-stage.servicemonster.net/sm6" target="_blank">SM 6 - Stage</a>
+          </li>
+          <li>
+            <a href="https://west-test.servicemonster.net/sm6" target="_blank">SM 6 - Test</a>
+          </li>
+          <li>
+            <a href="http://six.servicemonster.net" target="_blank">SM 6 - Production</a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <a href="http://localhost:60861/Default.aspx" target="_blank">CC - Local</a>
+          </li>
+          <li>
+            <a href="http://dragon/sm6/callcenter" target="_blank">CC - Dragon</a>
+          </li>
+          <li>
+            <a href="https://west-stage.servicemonster.net/callcenter" target="_blank">CC - Stage</a>
+          </li>
+          <li>
+            <a href="https://west-test.servicemonster.net/callcenter" target="_blank">CC - Test</a>
+          </li>
+          <li>
+            <a href="http://cc.servicemonster.net" target="_blank">CC - Production</a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <a href="http://localhost:51683/checkout/acme_carpet_cleaning/ZjY0cVoyNndvdFM3YVJnV2U4WFkxajdhcHBHQTZlblAwRlJERWRwQzFXOCUzZA==/sample"
+              target="_blank">WebForms - Local</a>
+          </li>
+          <li>
+            <a href="http://dragon/sm_webforms/checkout/acme_carpet_cleaning/ZjY0cVoyNndvdFM3YVJnV2U4WFkxajdhcHBHQTZlblAwRlJERWRwQzFXOCUzZA==/sample"
+              target="_blank">WebForms - Dragon</a>
+          </li>
+          <li>
+            <a href="https://west-stage.servicemonster.net/callcenter" target="_blank">WebForms - Stage</a>
+          </li>
+          <li>
+            <a href="https://west-test.servicemonster.net/callcenter" target="_blank">WebForms - Test</a>
+          </li>
+          <li>
+            <a href="http://cc.servicemonster.net" target="_blank">WebForms - Production</a>
+          </li>
+        </ul>
+      </div>
     </div>
+  </div>
+  <div class="firefox">
+    <div class="personal">
+      <div class="section">
+        <span>Social</span>
+        <br />
+        <ul>
+          <li>
+            <a href="https://www.reddit.com" target="_blank">Reddit</a>
+          </li>
+          <li>
+            <a href="https://www.twitter.com" target="_blank">Twitter</a>
+          </li>
+          <li>
+            <a href="https://mail.google.com" target="_blank">Gmail</a>
+          </li>
+          <li>
+            <a href="https://mail.yahoo.com" target="_blank">Yahoo Mail</a>
+          </li>
+        </ul>
+      </div>
+      <div class="section">
+        <span>Football</span>
+        <br />
+        <ul>
+          <li>
+            <a href="https://football.fantasysports.yahoo.com/f1/632271" target="_blank">Yahoo! Fantasy League</a>
+          </li>
+          <li>
+            <a href="https://www.reddit.com/r/fantasyfootball" target="_blank">r/FantasyFootball</a>
+          </li>
+          <li>
+            <a href="https://www.fantasypros.com/nfl/myplaybook/cheat-sheets.php" target="_blank">Fantasy Pros</a>
+          </li>
+          <li>
+            <a href="http://www.borischen.co/">Boris Chen Tier Charts</a>
+          </li>
+        </ul>
+      </div>
+      <div class="section">
+        <span>Shopping</span>
+        <br />
+        <ul>
+          <li>
+            <a href="https://slickdeals.net/" target="_blank">Slick Deals</a>
+          </li>
+          <li>
+            <a href="https://www.amazon.com/" target="_blank">Amazon</a>
+          </li>
+        </ul>
+      </div>
+      <div class="section">
+        <span>Media</span>
+        <br />
+        <ul>
+          <li>
+            <a href="https://www.youtube.com/" target="_blank">YouTube</a>
+          </li>
+          <li>
+            <a href="https://tv.youtube.com/" target="_blank">YouTube TV</a>
+          </li>
+          <li>
+            <a href="http://10.0.0.208:32400/web/index.html" target="_blank">Plex</a>
+          </li>
+          <li>
+            <a href="https://www.amazon.com/gp/video/storefront" target="_blank">Prime Video</a>
+          </li>
+          <li>
+            <a href="https://www.netflix.com/" target="_blank">Netflix</a>
+          </li>
+          <li>
+            <a href="http://10.0.0.206:9091/transmission/web/#upload">Transmission</a>
+          </li>
+          <li>
+            <a href="https://www.twitch.tv/" target="_blank">Twitch</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div>
+      <div class="section">
+        <span>Work Links</span>
+        <br />
+        <ul>
+          <li>
+            <a href="https://servicemonster818.workplace.com/" target="_blank">Workplace</a>
+          </li>
+          <li>
+            <a href="https://developer.servicemonster.net/" target="_blank">Dev Docs</a>
+          </li>
+          <li>
+            <a href="https://principalfocus-my.sharepoint.com/personal/emccleskey_servicemonster_net/_layouts/15/onedrive.aspx?ct=1590623353095&or=OWA%2DNT&cid=810aa762%2D5e71%2D7958%2Dfc0a%2Dfa6239258edb&originalPath=aHR0cHM6Ly9wcmluY2lwYWxmb2N1cy1teS5zaGFyZXBvaW50LmNvbS86ZjovZy9wZXJzb25hbC9lbWNjbGVza2V5X3NlcnZpY2Vtb25zdGVyX25ldC9FdG1Zb1J2dE5LNU5oZEwxaldnX0dXRUItSV9YLVRxeHhqMDV6QjRmWE14X2pRP3J0aW1lPWFJa29qNWdDMkVn&id=%2Fpersonal%2Femccleskey%5Fservicemonster%5Fnet%2FDocuments%2FTimesheets%20%2D%20Dev%2FAndersonMatt"
+              target="_blank">Timesheets</a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <a href="http://localhost:53905/desktop#home" target="_blank">SM 6 - Local</a>
+          </li>
+          <li>
+            <a href="http://dragon/sm6/desktop#home" target="_blank">SM 6 - Dragon</a>
+          </li>
+          <li>
+            <a href="https://west-stage.servicemonster.net/sm6" target="_blank">SM 6 - Stage</a>
+          </li>
+          <li>
+            <a href="https://west-test.servicemonster.net/sm6" target="_blank">SM 6 - Test</a>
+          </li>
+          <li>
+            <a href="http://six.servicemonster.net" target="_blank">SM 6 - Production</a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <a href="http://localhost:60861/Default.aspx" target="_blank">CC - Local</a>
+          </li>
+          <li>
+            <a href="http://dragon/sm6/callcenter" target="_blank">CC - Dragon</a>
+          </li>
+          <li>
+            <a href="https://west-stage.servicemonster.net/callcenter" target="_blank">CC - Stage</a>
+          </li>
+          <li>
+            <a href="https://west-test.servicemonster.net/callcenter" target="_blank">CC - Test</a>
+          </li>
+          <li>
+            <a href="http://cc.servicemonster.net" target="_blank">CC - Production</a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <a href="http://localhost:51683/checkout/acme_carpet_cleaning/ZjY0cVoyNndvdFM3YVJnV2U4WFkxajdhcHBHQTZlblAwRlJERWRwQzFXOCUzZA==/sample"
+              target="_blank">WebForms - Local</a>
+          </li>
+          <li>
+            <a href="http://dragon/sm_webforms/checkout/acme_carpet_cleaning/ZjY0cVoyNndvdFM3YVJnV2U4WFkxajdhcHBHQTZlblAwRlJERWRwQzFXOCUzZA==/sample"
+              target="_blank">WebForms - Dragon</a>
+          </li>
+          <li>
+            <a href="https://west-stage.servicemonster.net/callcenter" target="_blank">WebForms - Stage</a>
+          </li>
+          <li>
+            <a href="https://west-test.servicemonster.net/callcenter" target="_blank">WebForms - Test</a>
+          </li>
+          <li>
+            <a href="http://cc.servicemonster.net" target="_blank">WebForms - Production</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
