--- a/Index.html
+++ b/Index.html
@@ -26,20 +26,20 @@
     function init() {
       let userAgent = navigator.userAgent;
 
-      if (userAgent.match(/edg/i)) {
-        alert("edge");
-      } else if (userAgent.match(/firefox|fxios/i)) {
-        alert("firefox");
-      } else if (userAgent.match(/safari/i)) {
-        alert("safari");
-      } else if (userAgent.match(/opr\//i)) {
-        alert("opera");
-      } else if (userAgent.match(/chrome|chromium|crios/i)) {
-        alert("chrome");
-      }
-      else {
-        alert("No browser detection");
-      }
+      // if (userAgent.match(/edg/i)) {
+      //   alert("edge");
+      // } else if (userAgent.match(/firefox|fxios/i)) {
+      //   alert("firefox");
+      // } else if (userAgent.match(/safari/i)) {
+      //   alert("safari");
+      // } else if (userAgent.match(/opr\//i)) {
+      //   alert("opera");
+      // } else if (userAgent.match(/chrome|chromium|crios/i)) {
+      //   alert("chrome");
+      // }
+      // else {
+      //   alert("No browser detection");
+      // }
     }
 
   </script>
