--- a/Index.html
+++ b/Index.html
@@ -195,7 +195,7 @@
         </ul>
       </div>
     </div>
-  </div>
+  <!-- </div>
   <div class="firefox">
     <div class="personal">
       <div class="section">
@@ -345,7 +345,7 @@
         </ul>
       </div>
     </div>
-  </div>
+  </div> -->
 </body>
 
 </html>
