open links in same window. Fix webforms links

--- a/Index.html
+++ b/Index.html
@@ -53,16 +53,16 @@
         <br />
         <ul>
           <li>
-            <a href="https://www.reddit.com" target="_blank">reddit</a>
+            <a href="https://www.reddit.com" >reddit</a>
           </li>
           <li>
-            <a href="https://www.twitter.com" target="_blank">Twitter</a>
+            <a href="https://www.twitter.com" >Twitter</a>
           </li>
           <li>
-            <a href="https://mail.google.com" target="_blank">Gmail</a>
+            <a href="https://mail.google.com" >Gmail</a>
           </li>
           <li>
-            <a href="https://mail.yahoo.com" target="_blank">Yahoo Mail</a>
+            <a href="https://mail.yahoo.com" >Yahoo Mail</a>
           </li>
         </ul>
       </div>
@@ -71,13 +71,13 @@
         <br />
         <ul>
           <li>
-            <a href="https://football.fantasysports.yahoo.com/f1/632271" target="_blank">Yahoo! Fantasy League</a>
+            <a href="https://football.fantasysports.yahoo.com/f1/632271" >Yahoo! Fantasy League</a>
           </li>
           <li>
-            <a href="https://www.reddit.com/r/fantasyfootball" target="_blank">r/FantasyFootball</a>
+            <a href="https://www.reddit.com/r/fantasyfootball" >r/FantasyFootball</a>
           </li>
           <li>
-            <a href="https://www.fantasypros.com/nfl/myplaybook/cheat-sheets.php" target="_blank">Fantasy Pros</a>
+            <a href="https://www.fantasypros.com/nfl/myplaybook/cheat-sheets.php" >Fantasy Pros</a>
           </li>
           <li>
             <a href="http://www.borischen.co/">Boris Chen Tier Charts</a>
@@ -89,10 +89,10 @@
         <br />
         <ul>
           <li>
-            <a href="https://slickdeals.net/" target="_blank">Slick Deals</a>
+            <a href="https://slickdeals.net/" >Slick Deals</a>
           </li>
           <li>
-            <a href="https://www.amazon.com/" target="_blank">Amazon</a>
+            <a href="https://www.amazon.com/" >Amazon</a>
           </li>
         </ul>
       </div>
@@ -101,22 +101,22 @@
         <br />
         <ul>
           <li>
-            <a href="https://www.youtube.com/" target="_blank">YouTube</a>
+            <a href="https://www.youtube.com/" >YouTube</a>
           </li>
           <li>
-            <a href="http://10.0.0.207:32400/web/index.html" target="_blank">Plex</a>
+            <a href="http://10.0.0.207:32400/web/index.html" >Plex</a>
           </li>
           <li>
-            <a href="https://www.amazon.com/gp/video/storefront" target="_blank">Prime Video</a>
+            <a href="https://www.amazon.com/gp/video/storefront" >Prime Video</a>
           </li>
           <li>
-            <a href="https://www.netflix.com/" target="_blank">Netflix</a>
+            <a href="https://www.netflix.com/" >Netflix</a>
           </li>
           <li>
             <a href="http://10.0.0.207:9091/transmission/web/#upload">Transmission</a>
           </li>
           <li>
-            <a href="https://www.twitch.tv/" target="_blank">Twitch</a>
+            <a href="https://www.twitch.tv/" >Twitch</a>
           </li>
         </ul>
       </div>
@@ -126,76 +126,74 @@
         <span>Work Links</span>
         <br />
         <ul>
-          
-
           <li>
-            <a href="http://dragon/deploy/app#/" target="_blank">Octopus Deploy</a>
+            <a href="http://dragon/deploy/app#/" >Octopus Deploy</a>
           </li>
           <li>
-            <a href="https://servicemonster818.workplace.com/" target="_blank">Workplace</a>
+            <a href="https://servicemonster818.workplace.com/" >Workplace</a>
           </li>
           <li>
-            <a href="https://developer.servicemonster.net/" target="_blank">Dev Docs</a>
+            <a href="https://developer.servicemonster.net/" >Dev Docs</a>
           </li>
           <li>
             <a href="https://principalfocus-my.sharepoint.com/personal/emccleskey_servicemonster_net/_layouts/15/onedrive.aspx?ct=1590623353095&or=OWA%2DNT&cid=810aa762%2D5e71%2D7958%2Dfc0a%2Dfa6239258edb&originalPath=aHR0cHM6Ly9wcmluY2lwYWxmb2N1cy1teS5zaGFyZXBvaW50LmNvbS86ZjovZy9wZXJzb25hbC9lbWNjbGVza2V5X3NlcnZpY2Vtb25zdGVyX25ldC9FdG1Zb1J2dE5LNU5oZEwxaldnX0dXRUItSV9YLVRxeHhqMDV6QjRmWE14X2pRP3J0aW1lPWFJa29qNWdDMkVn&id=%2Fpersonal%2Femccleskey%5Fservicemonster%5Fnet%2FDocuments%2FTimesheets%20%2D%20Dev%2FAndersonMatt"
-              target="_blank">Timesheets</a>
+              >Timesheets</a>
           </li>
           <li>
-            <a href="https://old.servicemonster.net/trackers" target="_blank">Axosoft</a>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <a href="http://localhost:53905/desktop#home" target="_blank">SM 6 - Local</a>
-          </li>
-          <li>
-            <a href="http://dragon/sm6/desktop#home" target="_blank">SM 6 - Dragon</a>
-          </li>
-          <li>
-            <a href="https://west-stage.servicemonster.net/sm6" target="_blank">SM 6 - Stage</a>
-          </li>
-          <li>
-            <a href="https://west-test.servicemonster.net/sm6" target="_blank">SM 6 - Test</a>
-          </li>
-          <li>
-            <a href="http://six.servicemonster.net" target="_blank">SM 6 - Production</a>
+            <a href="https://old.servicemonster.net/trackers" >Axosoft</a>
           </li>
         </ul>
         <ul>
           <li>
-            <a href="http://localhost:60861/Default.aspx" target="_blank">CC - Local</a>
+            <a href="http://localhost:53905/desktop#home" >SM 6 - Local</a>
           </li>
           <li>
-            <a href="http://dragon/sm6/callcenter" target="_blank">CC - Dragon</a>
+            <a href="http://dragon/sm6/desktop#home" >SM 6 - Dragon</a>
           </li>
           <li>
-            <a href="https://west-stage.servicemonster.net/callcenter" target="_blank">CC - Stage</a>
+            <a href="https://west-stage.servicemonster.net/sm6" >SM 6 - Stage</a>
           </li>
           <li>
-            <a href="https://west-test.servicemonster.net/callcenter" target="_blank">CC - Test</a>
+            <a href="https://west-test.servicemonster.net/sm6" >SM 6 - Test</a>
           </li>
           <li>
-            <a href="http://cc.servicemonster.net" target="_blank">CC - Production</a>
+            <a href="http://six.servicemonster.net" >SM 6 - Production</a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <a href="http://localhost:60861/Default.aspx" >CC - Local</a>
+          </li>
+          <li>
+            <a href="http://dragon/sm6/callcenter" >CC - Dragon</a>
+          </li>
+          <li>
+            <a href="https://west-stage.servicemonster.net/callcenter" >CC - Stage</a>
+          </li>
+          <li>
+            <a href="https://west-test.servicemonster.net/callcenter" >CC - Test</a>
+          </li>
+          <li>
+            <a href="http://cc.servicemonster.net" >CC - Production</a>
           </li>
         </ul>
         <ul>
           <li>
             <a href="http://localhost:51683/checkout/acme_carpet_cleaning/ZjY0cVoyNndvdFM3YVJnV2U4WFkxajdhcHBHQTZlblAwRlJERWRwQzFXOCUzZA==/sample"
-              target="_blank">WebForms - Local</a>
+              >WebForms - Local</a>
           </li>
           <li>
             <a href="http://dragon/sm_webforms/checkout/acme_carpet_cleaning/ZjY0cVoyNndvdFM3YVJnV2U4WFkxajdhcHBHQTZlblAwRlJERWRwQzFXOCUzZA==/sample"
-              target="_blank">WebForms - Dragon</a>
+              >WebForms - Dragon</a>
           </li>
           <li>
-            <a href="https://west-stage.servicemonster.net/sm_webforms/checkout/" target="_blank">WebForms - Stage</a>
+            <a href="https://west-stage.servicemonster.net/sm_webforms/checkout/acme-carpet-cleaning6678/M0R2d0N2TCUyZnlQb2ZmUFdjJTJma2x1WkhrZnFqSld0RSUyQk9FSWVFTkdTRXMlMkI4JTNk/sample" >WebForms - Stage</a>
           </li>
           <li>
-            <a href="https://west-test.servicemonster.net/sm_webforms/checkout/" target="_blank">WebForms - Test</a>
+            <a href="https://west-test.servicemonster.net/sm_webforms/checkout/acme-carpet-cleaning6678/M0R2d0N2TCUyZnlQb2ZmUFdjJTJma2x1WkhrZnFqSld0RSUyQk9FSWVFTkdTRXMlMkI4JTNk/sample" >WebForms - Test</a>
           </li>
           <li>
-            <a href="http://forms.servicemonster.net/checkout/" target="_blank">WebForms - Production</a>
+            <a href="https://forms.servicemonster.net/forms/checkout/acme-carpet-cleaning/bDA2eXZKMEpUNGhuc1RianFhTnFSaWVaWDFUSWVDTSUyQlgwRDklMkI2VFpwVDAlM2Q=/sample" >WebForms - Production</a>
           </li>
         </ul>
       </div>
