--- a/Index.html
+++ b/Index.html
@@ -92,7 +92,7 @@
             <a href="https://slickdeals.net/" >Slick Deals</a>
           </li>
           <li>
-            <a href="https://www.amazon.com/" >Amazon</a>
+            <a href="https://www.amazon.com/" target="_blank" >Amazon</a>
           </li>
         </ul>
       </div>
