change ff league. add hulu

--- a/Index.html
+++ b/Index.html
@@ -71,7 +71,7 @@
         <br />
         <ul>
           <li>
-            <a href="https://football.fantasysports.yahoo.com/f1/632271" target="_blank">Yahoo! Fantasy League</a>
+            <a href="https://football.fantasysports.yahoo.com/f1/376077" target="_blank">Yahoo! Fantasy League</a>
           </li>
           <li>
             <a href="https://www.reddit.com/r/fantasyfootball" target="_blank">r/FantasyFootball</a>
@@ -111,6 +111,9 @@
           </li>
           <li>
             <a href="https://www.netflix.com/" target="_blank">Netflix</a>
+          </li>
+          <li>
+            <a href="https://www.hulu.com/" target="_blank">Hulu</a>
           </li>
           <li>
             <a href="http://10.0.0.207:9091/transmission/web/#upload" target="_blank">Transmission</a>
