--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,10 @@
             color: #1c3d53;
         }
 
+        a:hover{
+            color: #555;
+        }
+
         .personal {
             width: 100%;
             height: 300px;
